# fancy-source-query

./: .gitignore  README.md  fancy_source_query.toml  mapnames.toml  pyproject.toml
fancy_source_query/: config.py  exceptions.py  fmt.py  guess_map.py  interfaces.py  server_group.py
fancy_source_query/interfaces/: __init__.py  cli.py  nonebot.py
fancy_source_query/querypool/: __init__.py  infos.py
tests/: test_guess_map.py
